[gd_scene load_steps=10 format=3 uid="uid://ux5djreyl5xi"]

[ext_resource type="Script" uid="uid://cukx15w7o2qjl" path="res://scripts/soda_can.gd" id="1_re0e6"]
[ext_resource type="Texture2D" uid="uid://mdnhg53nl80i" path="res://assets/sodacan.png" id="2_cn04q"]
[ext_resource type="PackedScene" uid="uid://dilp511xr1wd0" path="res://scenes/ringpull.tscn" id="2_qofvw"]
[ext_resource type="PackedScene" uid="uid://bmjq0cgvtx58q" path="res://scenes/explosion.tscn" id="3_qofvw"]
[ext_resource type="Texture2D" uid="uid://h0idxqioki50" path="res://assets/progress.png" id="5_ro28p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qofvw"]
size = Vector2(396, 723)

[sub_resource type="Animation" id="Animation_cn04q"]
resource_name = "shake"
length = 0.15
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03333334, 0.075, 0.11666667, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(0, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qofvw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ro28p"]
_data = {
&"RESET": SubResource("Animation_qofvw"),
&"shake": SubResource("Animation_cn04q")
}

[node name="Soda Can" type="Area2D" groups=["ringpull", "sodacan"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_re0e6")
ringpull = ExtResource("2_qofvw")
explosion = ExtResource("3_qofvw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cn04q")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprite2D"]
position = Vector2(90, -348)
amount = 20
texture = ExtResource("5_ro28p")
direction = Vector2(1, -29.155)
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
scale_amount_min = 0.05
scale_amount_max = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_qofvw")

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ro28p")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explodetimer_timeout"]
